<resources>
    <string name="app_name">GVCC TT Timer</string>
    <string name="club_app_name">Time Trial Timer</string>
    <string name="usac_app_name">USAC Time Trial Timer</string>
    <string name="CheckIns">Check In</string>
    <string name="RacerID">ID</string>
    <string name="AddNewRacer">Add New Racer</string>
    <string name="VerifyRacers">Verify Racers</string>
    <string name="StartOrder"><u>Start Order</u></string>
	<string name="btnNewRacer">Add New Racer</string>
	<string name="btnAddNewRacer">Submit New Racer</string>
	<string name="txtFirstName">First Name: </string>
	<string name="txtLastName">Last Name: </string>
	<string name="txtBarcode">Barcode: </string>
	<string name="lblCourse">Course</string>
	<string name="lblDate">Date</string>
	<string name="Start">Start</string>
	<string name="Finish">Finish</string>
	<string name="RacerFinished">Racer Finished</string>
	<string name="Edit">Edit</string>
	<string name="RacersToFinish"><u>Racers To Finish</u></string>
	<string name="Assign">Assign</string>
	<string name="FinishTimes"><u>Finish Times</u></string>
	<string name="Results">Results</string>
	<string name="SubmitResults">Submit Results</string>
	<string name="Placing">Placing</string>
	<string name="Category">Category</string>
	<string name="Name">Name</string>
	<string name="Points">Points</string>
	<string name="OverallResults"><u>Overall Results</u></string>
	<string name="CategoryResults"><u>Category Results</u></string>
	<string name="ARiders">A Riders</string>
	<string name="B4Riders">B4 Riders</string>
	<string name="B5Riders">B5 Riders</string>
	<string name="Weather">Weather Notes</string>
	<string name="Notes">Other Notes</string>
	<string name="Temperature">Temperature</string>
	<string name="WindSpeed">Wind Speed</string>
	<string name="WindDirection">Wind Direction</string>
	<string name="Humidity">Humidity</string>
	<string-array name="humidity_array">
	<item>Dry</item>
	<item>Moderate</item>
	<item>Humid</item>
	<item>Raining</item>
	</string-array>
	<string name="StartInterval">Start Interval:</string>
	<string-array name="start_interval_array">
	<item>30 Seconds</item>
	<item>1 Minute</item>
	</string-array>
	<string name="CheckIn">Check In</string>
	<string name="InitialPopulate">Initial Populate</string>
	<string name="btnSubmit">Submit</string>
	<string name="ChangeLocationTo">Change race location to:</string>
	<string name="btnChangeLocation">Change Location</string>
	<string name="Race">Race</string>
	<string name="OnDeck"><u>On Deck</u></string>
	<string name="startText">Start</string>
	<string name="resetText">Reset</string>
	<string name="pauseText">Pause</string>
	<string name="SaveNotes">Save</string>
	<string name="StartCheckIn">Start Check In</string>
	<string name="ChooseRace">Race Configuration</string>
	<string name="RaceTypeLabel">Race Type:</string>
	<string name="TeamName">Team Name:</string>
	<string name="AddNewTeam">Add New Team</string>
	<string name="Settings">Settings</string>
	<string name="DistanceUnits">Distance Units:</string>
	<string name="TemperatureUnits">Temperature Units:</string>
	<string name="SaveSettings">Save Settings</string>
	<string-array name="distance_units_array">
		<item >Miles</item>
		<item >Kilometers</item>
	</string-array>
	<string-array name="temperature_units_array">
		<item >Farenheit</item>
		<item >Celcius</item>
	</string-array>
	<string name="btnAddNewTeam">Save Team</string>
	<string name="RaceLocation">Race Location:</string>
	<string name="AddRace">Add New Race</string>
	<string name="EnterAdminPassword">Enter the Admin password:</string>
	<string name="btnCancel">Cancel</string>
	<string name="AdminMenu">Admin Menu</string>
	<string name="AdminPassword">Admin Password</string>
	<string name="AddLocation">Add Location</string>
	<string name="CourseName">Course Name</string>
	<string name="Distance">Distance</string>
	<string name="viewingMode">Viewing Mode</string>
	<string name="lblViewingMode">No races are configured for this date.  Would you like to add a new race, or view other race results?</string>
	<string name="btnCurrentRace">Check In/Start Race</string>
	<string name="btnPreviousRaces">Other Results</string>
	<string name="lblLocation">Location</string>
	<string name="btnChangeRaceType">Change Race Type</string>
	<string name="NoRaceSelected">No Race Selected</string>
	<string name="EditRaceDetails">Edit Race Details</string>
	<string name="AppSettings">Application Settings</string>
	<string name="btnAddNewRace">Add New Race</string>
	<string name="RacerViewMode">Would you like to:</string>
	<string name="ViewRacerInfo">View Racer Info</string>
	<string name="EditRaceResult">Correct this racer\'s time</string>
	<string name="lblElapsedTime">Elapsed Time:</string>
	<string name="lblFilterByName">Filter by Last Name:</string>
	<string name="Date">Date:</string>
	<string name="Course">Course:</string>
	<string name="lblDistance">Distance:</string>
	<string name="lblRaceType">Race Type:</string>
	<string name="lblStartInterval">Start Interval:</string>
	<string name="MarshalLocations">Show Marshal Locations</string>
	<string name="EditRace">Edit Race</string>
	<string name="defaultTime">00:00:00.0</string>
	<string name="SaveChanges">Save Changes</string>
	<string name="RaceConfiguration">Race Configuration</string>
	<string name="MarshalLocation">Marshal Location</string>
	<string name="InvalidPassword">Invalid Password</string>
	<string name="lblCourseRecord">Course Record:</string>
	<string name="RemoveRacer">Remove Racer</string>
	<string name="RemoveRacerExplanation">Would you like to remove this racer from the start list?</string>
	<string name="RemoveTeamExplanation">Would you like to remove this team from the start list?</string>
	<string name="lblCategory">Race Category:</string>
	<string name="lblPersonalBest">Course PR:</string>
	<string name="lblCurrentResult">Current Result:</string>
	<string name="lblPreviousResults">Previous Results:</string>
	<string name="RaceResults">Race Results</string>
	<string name="RemoveUnassignedTimeExplanation">Would you like to remove this time?  You should only do this if you accidentally pressed the "Racer Finished" button</string>
	<string name="RemoveUnassignedTime">Remove Time</string>
	<string name="PreviousResults">Previous Race Results</string>
	<string name="NumberOfLaps">Number of Laps:</string>
	<string name="RacerList">Racer List:</string>
	<string name="ChooseRacers">Choose Racers:</string>
	<string name="Racer1">Racer 1:</string>
	<string name="Racer2">Racer 2:</string>
	<string name="Racer3">Racer 3:</string>
	<string name="Racer4">Racer 4:</string>
	<string name="Racer5">Racer 5:</string>
	<string name="btnChooseRacer">Choose Racer</string>
	<string name="btnDone">Done</string>
	<string name="BackToRaceInProgress">Back to Race in Progress</string>
	<string name="btnChoose">Choose</string>
	<string name="btnRemove">Remove</string>
	<string name="DNF">DNF</string>
	<string name="lblElapsedTimeDescription">Elapsed Time (H:MM:SS.m)</string>
	<string name="lblRacerFinished">Racer Finished - Set Elapsed Time</string>
	<string name="RemoveTeam">Remove Team</string>
	<string name="LapCompleted">Lap Completed</string>
	<string name="lblLaps">Number of Laps:</string>
	<string name="lblUSACNumber">USAC License Number:</string>
	<string name="laps"><u>Laps:</u></string>
	<string name="EditRacerInfo">Edit Racer Info</string>
	<string name="ReorderRacer">Change Start Order</string>
	<string name="btnReorderRacer">Change Order</string>
	<string name="ChangeOrderExplanation">Please enter the new start order number for this racer:</string>
	<string name="StartOrderActionsExplanation">Please choose an action to perform on this racer:</string>
	<string name="StartOrderActions">Start Order Actions</string>
	<string name="HeaderTime"><u>Time</u></string>
	<string name="HeaderRacerName"><u>Racer Name</u></string>
	<string name="HeaderCat"><u>Cat</u></string>
	<string name="HeaderPoints"><u>Pts</u></string>
	<string name="Cancel">Cancel</string>
	<string name="Select">Select</string>
	<string name="AdminAuth">Admin Authorization</string>
	<string name="AddGhostRacer">Add Ghost Racer</string>
	<string name="txtNumGhostSpots">Number of Ghost Spots</string>
	<string name="UnassignTime">Unassign Time from Racer</string>
	<string name="RacerUpgrade">Racer Upgrade</string>
	<string name="RecalcResults">Recalculate Results</string>
	<string name="OtherRaceResults">Other Race Results</string>
	<string name="RaceToView">Race to View</string>
	<string name="RaceInfo">Race Info</string>
	<string name="NumberOfRacers">Number of racers:</string>
	<string name="RaceDistance">Race distance:</string>
	<string name="sec">sec</string>
	<string name="RacerName">Racer Name</string>
	<string name="CategoryRank">Category rank</string>
	<string name="CategoryPoints">Category points</string>
	<string name="RacerUpgraded">Racer Upgraded</string>
	<string name="IncorrectCategory">Incorrect Category</string>
	<string name="UploadToDropbox">Upload Roster to Dropbox</string>
	<string name="AutoCheckIn">Check In New Racer After Add?</string>
	<string name="AutoStartApp">Auto Start App After Unlock?</string>
	<string name="btnContinue">Continue</string>
	<string name="ResetTimer">Reset Timer</string>
	<string name="ResetTimerText">Are you sure you want to reset the timer?\n\nIf you reset, you may want to continue any timing manually (use a stopwatch outside of this app).  Resetting the timer will affect the displayed time, but the racer\'s times will still be calculated from the initial start.</string>
	<string name="YesReset">Yes, Reset</string>
	<string name="NoDontReset">No, Don\'t Reset</string>
	<string name="ResetRacersText">WARNING!!!!\n\nWould you like to reset all racers start times?\n\nYou should only reset the start times if you are going to restart every racer in the race.  Use this if you accidentally pushed the "Start" button, and no racers have actually started yet.  Resetting racer\'s start times will affect the time calculations.</string>
	<string name="ResetAllRacersStartTime">Racers start times reset!</string>
	<string name="GO">GO!</string>
	<string name="btnSeriesResults">Series Results</string>
	<string name="SeriesResults">Series Results</string>
	<string name="EditLocation">Edit Location</string>
	<string name="IdenticalRacerUpgrade">Found identical racer name with different category.\n\nUpgrading racer category.</string>
	<string name="UnlockDesktop">Unlock Home Button</string>
	<string name="GetLocationImagesFromDropbox">Get Location Images from Dropbox</string>
	<string name="LocationImage">An Image that will be associated with a location</string>
	<string name="PrevImage">Go to Previous Image</string>
	<string name="NextImage">Go to Next Image</string>
	<string name="KeepImage">Keep this Image</string>
	<string name="SubmitAllChanges">Submit All Changes</string>
	<string name="Keep">Keep</string>
	<string name="Discard">Discard</string>
	<string name="LocationNotes">Notes</string>
	<string name="DownloadProgress"><b>Downloading Image</b>\nProgress:</string>
	<string name="RetrievingDropboxImageList"><b>Retrieving Image List</b>\nProgress:</string>
	<string name="ComparingImageLists"><b>Comparing to Stored Image List</b>\nProgress:</string>
	<string name="NoNewImagesFound">No New Images Found</string>
	<string name="Retry">Retry</string>
	<string name="DefaultNumLaps">1</string>
	<string name="NoMarshalLocationImages">No marshal location images found for the current location!</string>
	<string name="AddRaceCategory">Add Race Categories</string>
	<string name="RaceCategoryName">Race Category Name</string>
	<string name="CurrentRaceCategories">Current Race Categories</string>
	<string name="RaceSeriesName">Race Series Name:</string>
	<string name="AddRaceSeries">Add Race Series</string>
	<string name="RaceSeriesStartDate">Series Start Date</string>
</resources>