<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"  
    android:background="#FFFF"
    style="@style/Padded" >

    <TextView
        android:id="@+id/lblElapsedTimeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblElapsedTimeDescription"
        style="@style/Medium" />

    <com.xcracetiming.android.tttimer.Controls.TimePicker
        android:id="@+id/elapsedTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </com.xcracetiming.android.tttimer.Controls.TimePicker>
    
    <Button
		android:id="@+id/btnUnassignTime"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/UnassignTime"
		style="@style/Medium" />
    
    <TextView
        android:id="@+id/lblDNF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DNF"
        android:visibility="gone"
        style="@style/ExtraLarge.Padded" />
    
    <Button
		android:id="@+id/btnDNF"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/DNF"
		style="@style/Medium" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Points"
        style="@style/Medium" />
        
    <EditText
        android:id="@+id/txtPoints"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
		style="@style/Medium" />
        
	<Button
		android:id="@+id/btnSaveResultChanges"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/SaveChanges"
		style="@style/Medium" />
</LinearLayout>