<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#FFFF"
    style="@style/Padded" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RaceToView"
        style="@style/Medium" />

    <Spinner
        android:id="@+id/spinnerRaceToView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RaceInfo"
        style="@style/Large" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >
	    <TextView
	        android:id="@+id/lblNumberOfRacers"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/NumberOfRacers"
	        style="@style/Medium" />
	    
	    <TextView
	        android:id="@+id/txtNumberOfRacers"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/Medium.Padded" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout22"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >
	    <TextView
	        android:id="@+id/lblRaceDistance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/RaceDistance"
	        style="@style/Medium" />
	    
	    <TextView
	        android:id="@+id/txtRaceDistance"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/Medium.Padded" />
	</LinearLayout>
	
    <Button
        android:id="@+id/btnSaveSelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/Medium" 
        android:text="@string/Select" />
</LinearLayout>