<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/llTeamCheckIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/lblTeamName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TeamName"
        	style="@style/Medium" />

        <Spinner
            android:id="@+id/spinnerTeamName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFilters"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lblRacerName"
            style="@style/Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:gravity="right"
            android:text="@string/lblFilterByName" />

        <EditText
            android:id="@+id/txtRacerNameFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".65"
            android:singleLine="true"
            android:inputType="textCapWords"
            style="@style/Medium" />

        <TextView
            android:id="@+id/lblRacerID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:gravity="right"
            android:text="@string/RacerID"
			style="@style/Small"
            android:visibility="gone" />

        <EditText
            android:id="@+id/txtRacerIDFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:singleLine="true" 
            android:inputType="number"
            android:visibility="gone"/>
        
    </LinearLayout>

    <ListView
        android:id="@+id/tblFilteredRacers"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".35" >        
    </ListView>
    
    <LinearLayout
        android:id="@+id/llAddRacer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:gravity="right" >
        
        <Button android:id="@+id/btnAddGhostRacer"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/AddGhostRacer"
		    style="@style/Medium" />
        
        <Button
            android:id="@+id/btnAddNewTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddNewTeam"
            android:visibility="gone"
        	style="@style/Medium" />
        
		<Button android:id="@+id/btnAddNewRacer"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/AddNewRacer"
		    style="@style/Medium" />
	</LinearLayout>

    <TextView
        android:id="@+id/lblStartOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StartOrder"
	    style="@style/Medium" />

    <ListView
        android:id="@+id/tblCheckedInRacers"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.20" >

    </ListView>

</LinearLayout>