<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    style="@style/Padded" >

    <TextView
        android:id="@+id/txtRemoveTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RemoveTeamExplanation"
        style="@style/Medium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnRemoveTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RemoveTeam"
        	style="@style/Medium.Padded" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
        	style="@style/Medium.Padded" />

    </LinearLayout>

</LinearLayout>